# KIS-selection

./: CMakeLists.txt  README.md
app/: main.cpp
data/: Holmes.txt
include/: string_finder.hpp  suffix_automaton.hpp
src/: string_finder.cpp  suffix_automaton.cpp
